--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="subtitle"><a href="mailto:elofjon@gmail.com?subject=hi%20jon">elofjon@gmail.com</a></h2>
         <br/>
         <p class="bioparagraph">
-          Hullo! I am Jon. I'm a queer writer  pursuing an MFA in fiction at UNCW. I grew up in Rhode Island and studied neuroscience at Brown University. A 2021 AWP Intro Journals winner, I have work forthcoming in <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>, <a href="https://www.southeastreview.org/">The Southeast Review</a>, and <a href="https://pleiadesmag.com/">Pleiades</a>. Outside of writing, I'm a crossword fiend and an alto saxophonist.
+          Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW. I grew up in Rhode Island and studied neuroscience at Brown University. A 2021 AWP Intro Journals winner, I have work forthcoming in <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>, <a href="https://www.southeastreview.org/">The Southeast Review</a>, and <a href="https://pleiadesmag.com/">Pleiades</a>. Outside of writing, I'm a crossword fiend and an alto saxophonist.
         </p>
       </div>
       <!-- <div class="column">
