--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link type="text/css"rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/butler" type="text/css"/>
     <script type="text/javascript">google.load("jquery", "1.3.2");</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QVXKVWNZQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7QVXKVWNZQ');
+    </script>
   </head>
   <bsody>
     <div class="row">
