--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
       gtag('config', 'G-7QVXKVWNZQ');
     </script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <bsody>
     <div class="row">
@@ -26,7 +27,15 @@
         <h2 class="subtitle"><a href="mailto:elofjon@gmail.com?subject=hi%20jon">elofjon@gmail.com</a></h2>
         <br/>
         <p class="bioparagraph">
-          Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW. I grew up in Rhode Island and studied neuroscience at Brown University. A 2021 AWP Intro Journals winner, I have work forthcoming in <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>, <a href="https://www.southeastreview.org/">The Southeast Review</a>, and <a href="https://pleiadesmag.com/">Pleiades</a>. Outside of writing, I'm a crossword fiend and an alto saxophonist.
+          Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW.
+          I grew up in Rhode Island and studied neuroscience at Brown University.
+          A 2021 AWP Intro Journals winner, I have work forthcoming in
+          <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
+          <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
+          <a href="https://pleiadesmag.com/">Pleiades</a>. I'm currently a reader
+          for <a href="https://ecotonemagazine.org/">Ecotone</a> and I teach
+          two undergraduate courses. Outside of writing, I'm a crossword fiend
+          and an alto saxophonist.
         </p>
       </div>
     </div>
