--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           A 2021 AWP Intro Journals winner, I have work forthcoming in
           <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
           <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
-          <a href="https://pleiadesmag.com/">Pleiades</a>. I'm currently a reader
-          for <a href="https://ecotonemagazine.org/">Ecotone</a> and I teach
+          <a href="https://pleiadesmag.com/">Pleiades</a>. I also read
+          for <a href="https://ecotonemagazine.org/">Ecotone</a> and teach
           two undergraduate courses. Outside of writing, I'm a crossword fiend
           and an alto saxophonist.
         </p>
