--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <p class="bioparagraph">
           Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW.
           I grew up in Rhode Island and studied neuroscience at Brown University.
-          A 2021 AWP Intro Journals winner, I have work forthcoming in
+          A <a href="https://www.awpwriter.org/contests/intro_journals_project_overview">
+          2021 AWP Intro Journals winner</a>, I have work forthcoming in
           <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
           <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
           <a href="https://pleiadesmag.com/">Pleiades</a>. I also read
