justify fix attempt

--- a/index.html
+++ b/index.html
@@ -26,18 +26,20 @@
         <h1 class="name">Jon Elofson</h1>
         <h2 class="subtitle"><a href="mailto:elofjon@gmail.com?subject=hi%20jon">elofjon@gmail.com</a></h2>
         <br/>
-        <p class="bioparagraph">
-          Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW.
-          I grew up in Rhode Island and studied neuroscience at Brown University.
-          A <a href="https://www.awpwriter.org/contests/intro_journals_project_overview">
-          2021 AWP Intro Journals winner</a>, I have work forthcoming in
-          <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
-          <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
-          <a href="https://pleiadesmag.com/">Pleiades</a>. I also read
-          for <a href="https://ecotonemagazine.org/">Ecotone</a> and teach
-          two undergraduate courses. Outside of writing, I'm a crossword fiend
-          and an alto saxophonist.
-        </p>
+        <div class="bioparagraph">
+          <p>
+            Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW.
+            I grew up in Rhode Island and studied neuroscience at Brown University.
+            A <a href="https://www.awpwriter.org/contests/intro_journals_project_overview">
+            2021 AWP Intro Journals winner</a>, I have work forthcoming in
+            <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
+            <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
+            <a href="https://pleiadesmag.com/">Pleiades</a>. I also read
+            for <a href="https://ecotonemagazine.org/">Ecotone</a> and teach
+            two undergraduate courses. Outside of writing, I'm a crossword fiend
+            and an alto saxophonist.
+          </p>
+        </div>
       </div>
     </div>
   </body>
