--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
         <br/>
         <div class="bioparagraph">
           <p>
-            Hello! I'm Jon. I'm a queer writer pursuing an MFA in fiction at UNCW.
-            I grew up in Rhode Island and studied neuroscience at Brown University.
+            Hello! I'm Jon. I'm a writer pursuing an MFA in fiction at UNCW.
+            I grew up in Rhode Island and I like crosswords.
             A <a href="https://www.awpwriter.org/contests/intro_journals_project_overview">
             2021 AWP Intro Journals winner</a>, I have work forthcoming in
             <a href="http://haydensferryreview.com/">Hayden's Ferry Review</a>,
             <a href="https://www.southeastreview.org/">The Southeast Review</a>, and
             <a href="https://pleiadesmag.com/">Pleiades</a>. I also read
             for <a href="https://ecotonemagazine.org/">Ecotone</a> and teach
-            two undergraduate courses. Outside of writing, I'm a crossword fiend
-            and an alto saxophonist.
+            undergraduate creative writing.
           </p>
         </div>
       </div>
